# django-spaces-search

./: .gitignore  setup.cfg
spaces_search/: apps.py  forms.py  models.py  urls.py  views.py
spaces_search/templates/spaces_search/: search.html
