[metadata]
name = django_spaces_search
author = Mattes Sarcander
description = Adds support for searching arbitrary fields of Django Collab app models.
version = 0.1
url = https:///github.com/Fortschritt/django-spaces-search
keywords = 
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.4